--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "engines":>=14.20.1
+  "engines":{
+    "node":>=14.20.1
+  },
   "name": "bkend",
   "version": "1.0.0",
   "description": "",
